lib/core/network/waku/native/libwaku.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package github.com/waku-org/go-waku/library/c */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 4 "api.go"

#include <stdlib.h>
#include <stddef.h>

// The possible returned values for the functions that return int
static const int RET_OK = 0;
static const int RET_ERR = 1;
static const int RET_MISSING_CALLBACK = 2;

typedef void (*WakuCallBack) (int ret_code, const char* msg, void * user_data);

#line 1 "cgo-generated-wrapper"

#line 3 "api_discovery.go"

#include <cgo_utils.h>

#line 1 "cgo-generated-wrapper"

#line 3 "api_encoding.go"

#include <cgo_utils.h>

#line 1 "cgo-generated-wrapper"

#line 3 "api_filter.go"

#include <cgo_utils.h>

#line 1 "cgo-generated-wrapper"

#line 3 "api_lightpush.go"

#include <cgo_utils.h>

#line 1 "cgo-generated-wrapper"

#line 3 "api_relay.go"

#include <cgo_utils.h>

#line 1 "cgo-generated-wrapper"

#line 3 "api_store.go"

#include <cgo_utils.h>

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern void* waku_new(char* configJSON, WakuCallBack cb, void* userData);
extern int waku_start(void* ctx, WakuCallBack onErr, void* userData);
extern int waku_stop(void* ctx, WakuCallBack onErr, void* userData);
extern int waku_free(void* ctx, WakuCallBack onErr, void* userData);
extern int waku_is_started(void* ctx);
extern int waku_peerid(void* ctx, WakuCallBack cb, void* userData);
extern int waku_listen_addresses(void* ctx, WakuCallBack cb, void* userData);
extern int waku_add_peer(void* ctx, char* address, char* protocolID, WakuCallBack cb, void* userData);
extern int waku_connect(void* ctx, char* address, int ms, WakuCallBack cb, void* userData);
extern int waku_connect_peerid(void* ctx, char* peerID, int ms, WakuCallBack cb, void* userData);
extern int waku_disconnect(void* ctx, char* peerID, WakuCallBack cb, void* userData);
extern int waku_peer_cnt(void* ctx, WakuCallBack cb, void* userData);
extern int waku_content_topic(char* applicationName, char* applicationVersion, char* contentTopicName, char* encoding, WakuCallBack cb, void* userData);
extern int waku_default_pubsub_topic(WakuCallBack cb, void* userData);
extern void waku_set_event_callback(void* ctx, WakuCallBack cb);
extern int waku_peers(void* ctx, WakuCallBack cb, void* userData);
extern int waku_dns_discovery(void* ctx, char* url, char* nameserver, int ms, WakuCallBack cb, void* userData);
extern int waku_discv5_update_bootnodes(void* ctx, char* bootnodes, WakuCallBack cb, void* userData);
extern int waku_decode_symmetric(char* messageJSON, char* symmetricKey, WakuCallBack cb, void* userData);
extern int waku_decode_asymmetric(char* messageJSON, char* privateKey, WakuCallBack cb, void* userData);
extern int waku_encode_asymmetric(char* messageJSON, char* publicKey, char* optionalSigningKey, WakuCallBack cb, void* userData);
extern int waku_encode_symmetric(char* messageJSON, char* symmetricKey, char* optionalSigningKey, WakuCallBack cb, void* userData);
extern int waku_filter_subscribe(void* ctx, char* filterJSON, char* peerID, int ms, WakuCallBack cb, void* userData);
extern int waku_filter_ping(void* ctx, char* peerID, int ms, WakuCallBack cb, void* userData);
extern int waku_filter_unsubscribe(void* ctx, char* filterJSON, char* peerID, int ms, WakuCallBack cb, void* userData);
extern int waku_filter_unsubscribe_all(void* ctx, char* peerID, int ms, WakuCallBack cb, void* userData);
extern int waku_lightpush_publish(void* ctx, char* messageJSON, char* topic, char* peerID, int ms, WakuCallBack cb, void* userData);
extern int waku_relay_enough_peers(void* ctx, char* topic, WakuCallBack cb, void* userData);
extern int waku_relay_publish(void* ctx, char* messageJSON, char* topic, int ms, WakuCallBack cb, void* userData);
extern int waku_relay_subscribe(void* ctx, char* filterJSON, WakuCallBack cb, void* userData);
extern int waku_relay_topics(void* ctx, WakuCallBack cb, void* userData);
extern int waku_relay_unsubscribe(void* ctx, char* filterJSON, WakuCallBack cb, void* userData);
extern int waku_store_query(void* ctx, char* queryJSON, char* peerID, int ms, WakuCallBack cb, void* userData);
extern int waku_store_local_query(void* ctx, char* queryJSON, WakuCallBack cb, void* userData);

#ifdef __cplusplus
}
#endif